fix:overflow list

--- a/src/app/components/pages/jours-off/jours-off.component.css
+++ b/src/app/components/pages/jours-off/jours-off.component.css
@@ -3,8 +3,9 @@
   min-height:600px;
 }
 
-.list-jo {
+.list-container {
   font-size:0.8em;
+  max-height:500px;
 }
 .color-instruction {
   margin-top:2em;
